fixed scrollbar

--- a/Svbase/Svbase/Content/Site.css
+++ b/Svbase/Svbase/Content/Site.css
@@ -351,7 +351,6 @@ button a.white-color:focus {
 
 .scrollbar {
     display: list-item;
-    max-height: 420px;
     width: 100%;
     overflow-y: auto;
 }
